src/argocd/bootstrap-resources/.deprecated/frigate/cam01/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate-cam01
  labels:
    app.kubernetes.io/name: frigate-cam01
spec:
  replicas: 1
  revisionHistoryLimit: 0 
  selector:
    matchLabels:
      app.kubernetes.io/name: frigate-cam01
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frigate-cam01
    spec:
      securityContext:
        fsGroup: 1000
      nodeName: k8s01
      containers:
      - name: frigate-cam01
        image: ghcr.io/blakeblackshear/frigate:0.14.1
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
        volumeMounts:
        - name: frigate-cam01-configdir
          mountPath: /config
        - name: frigate-cam01-configmap
          mountPath: /config/config.yml
          subPath: config.yml
        - mountPath: /media/frigate
          name: frigate-data
        - mountPath: /dev/shm
          name: dshm
        livenessProbe:
          httpGet:
            path: /api
            port: 5000
          initialDelaySeconds: 300
          periodSeconds: 10
      priorityClassName: high-priority
      restartPolicy: Always
      volumes:
      - emptyDir:
          medium: Memory
          sizeLimit: 1Gi
        name: dshm
      - name: frigate-cam01-configmap
        configMap:
          name: frigate-cam01-config
      - name: frigate-cam01-configdir
        persistentVolumeClaim:
          claimName: frigate-cam01-pvc
      - name: frigate-data
        nfs:
          path: /mnt/hdd/nvr/cam01
          server: 10.1.60.6

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go2rtc-cam01
  labels:
    app.kubernetes.io/name: go2rtc-cam01
spec:
  replicas: 1
  revisionHistoryLimit: 0 
  selector:
    matchLabels:
      app.kubernetes.io/name: go2rtc-cam01
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: go2rtc-cam01
    spec:
      nodeName: k8s01
      hostNetwork: true
      containers:
      - name: go2rtc-cam01
        image: docker.io/alexxit/go2rtc:1.9.8
        volumeMounts:
        - name: go2rtc-cam01-configmap
          mountPath: /config/go2rtc.yaml
          subPath: go2rtc.yaml
      priorityClassName: high-priority
      restartPolicy: Always
      volumes:
      - name: go2rtc-cam01-configmap
        configMap:
          name: go2rtc-cam01-config
