src/argocd/bootstrap-resources/.deprecated/frigate/cam01/services.yml
apiVersion: v1
kind: Service
metadata:
  name: frigate-cam01
  labels:
    ryanb.tv/app: frigate
spec:
  selector:
    app.kubernetes.io/name: frigate-cam01
  ports:
  - name: http
    protocol: TCP
    port: 5000
    targetPort: http
