src/argocd/bootstrap-resources/.deprecated/frigate/cam01/ingresses.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frigate-cam01
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cam01.ryanb.tv`)
      kind: Rule
      services:
        - name: frigate-cam01
          kind: Service
          port: http
  tls: {}
